<resources>
    <string name="app_name">Fpoly Friend App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_shop">Shop</string>
    <string name="title_gifts">Gifts</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="fpolyfriends">Fpolyfriends</string>
    <string name="next">Next</string>
    <string name="chats">Chats</string>
    <string name="t_t_c_o_n_chat">Tất cả đoạn chat</string>
    <string name="t_ng_t_c_g_n_y">Tương tác gần đây</string>
    <string name="ng_i_d_ng_gi_u_t_n">Người dùng giấu tên</string>
    <string name="_08_43">08:43</string>
    <string name="c_ho_t_ng_g_n_y_t_ng_t_c_li_n">Có hoạt động gần đây, tương tác liền</string>
    <string name="_1">1</string>
    <string name="th_m_b_i_vi_t_m_i">Thêm bài viết mới</string>
    <string name="l_t_th_ch">Lượt thích</string>
    <string name="xu_t">Đề xuất</string>
    <string name="g_n_xung_quanh">Gần xung quanh</string>
    <string name="t_m_ki_m">Tìm kiếm</string>
    <string name="danh_s_ch">Danh sách</string>
    <string name="n_danh_20">Ẩn danh, 20</string>

    <string name="title_slider_1">Lượt tăng tốc</string>
    <string name="description_slider_1">Đẩy hồ sơ của bạn lên khu vực trong 30 phút để được tương tác nhiều hơn</string>

    <string name="title_slider_2">Mua Fpoly Friend Gold</string>
    <string name="description_slider_2">Xem ai thích bạn và nhiều thứ khác</string>

    <string name="title_slider_3">Fpoly Friend Platinum</string>
    <string name="description_slider_3">Nâng cấp mọi hoạt động của bạn trên Fpoly Friend</string>

    <string name="title_slider_4">Fpoly Friend Plus</string>
    <string name="description_slider_4">Nhận lượt thích vô hạn,Hộ Chiếu và nhiều thứ khác</string>

    <string name="title_slider_5">Nâng cấp trải nghiệm hẹn hò của bạn</string>
    <string name="description_slider_5">Mở khóa các tính năng hay nhất của Fpoly Friend</string>
    <string name="k_t_n_i_v_i_b_n_b">Kết nối với bạn bè</string>
    <string name="k_t_n_i_v_i_b_n_b_em_l_i_c_m_gi_c_g_n_g_i_v_an_to_n">Kết nối với bạn bè \nđem lại cảm giác gần gũi và an toàn</string>
    <string name="k_t_b_n_m_i_m_t_c_ch_d_d_ng">Kết bạn mới \nmột cách dễ dàng</string>
    <string name="cho_ph_p_b_n_k_t_b_n_m_i_l_u_ti_n_s_m_t_c_a_ch_ng_t_i">Cho phép bạn kết bạn mới là \nưu tiên số một của chúng tôi.....</string>
    <string name="th_hi_n_b_n_th_n_v_i_th_gi_i">Thể hiện bản thân với \nthế giới</string>
    <string name="h_y_gi_ng_n_i_c_a_b_n_c_l_ng_nghe_tr_n_internet_th_ng_qua_c_c_t_nh_n_ng_c_a_polyfriends_tr_n_ng_d_ng_m_kh_ng_b_h_n_ch">Hãy để giọng nói của bạn được lắng nghe \ntrên internet thông qua các tính năng \ntrên ứng dụng FPolyfriends  mà \nkhông bị hạn chế</string>
    <string name="ng_nh_p_b_ng_gmail_c_a_sinh_vi_n_fpoly_ch_ng_t_i_c_th_x_c_th_c_danh_t_nh_c_a_b_n">Đăng nhập bằng Gmail của sinh viên Fpoly để chúng tôi \ncó thể xác thực danh tính của bạn</string>
    <string name="ng_nh_p">Đăng nhập</string>
    <string name="nh_p_m_t_kh_u">Nhập mật khẩu</string>
    <string name="password">Password</string>
    <string name="nh_p_t_n_t_i_kho_n">Nhập tên tài khoản</string>
    <string name="email">Email</string>
    <string name="vui_l_ng_i_n_v_o_d_i_y">Vui lòng điền vào dưới đây</string>
    <string name="ng_k">Đăng kí</string>
    <string name="b_n_c_t_i_kho_n">Bạn đã có tài khoản?</string>
    <string name="welcome">Welcome</string>
    <string name="ch_o_m_ng_b_n_n_v_i_fpoly_friend">Chào mừng bạn đến với Fpoly Friend</string>
    <string name="m_b_o_nh_tu_i_ti_u_s_c_a_b_n_u_l_th_t">Đảm bảo ảnh, độ tuổi, tiểu sử của bạn đều \nlà thật</string>
    <string name="h_y_l_ch_nh_b_n">Hãy là chính bạn</string>
    <string name="m_b_o_an_to_n">Đảm bảo an toàn</string>
    <string name="ng_v_i_v_ng_chia_s_th_ng_tin_c_nh_n">Đừng vội vàng chia sẻ thông tin cá nhân</string>
    <string name="c_x_chu_n_m_c">Cư xử chuẩn mực</string>
    <string name="t_n_tr_ng_ng_i_kh_c_v_i_x_v_i_h_nh_c_c_b_n_mu_n_m_i_ng_i_th_hi_n_v_i_b_n">Tôn trọng người khác và đối xử với họ như \ncách bạn muốn mọi người thể hiện với bạn</string>
    <string name="lu_n_ch_ng">Luôn chủ động</string>
    <string name="lu_n_b_o_c_o_h_nh_vi_x_u">Luôn báo cáo hành vi xấu</string>
    <string name="vui_l_ng_tu_n_th_c_c_quy_t_c_chung_n_y">Vui lòng tuân thủ các Quy tắc chung này</string>
    <string name="t_i_ng">Tôi đồng ý</string>
    <string name="t_n">Tên</string>
    <string name="ti_p_t_c">Tiếp tục</string>
    <string name="d_d_m_m_y_y_y_y">D D / M M / Y Y Y Y</string>
    <string name="t_i_l">Tôi là</string>
    <string name="kh_c">Khác</string>
    <string name="nam">Nam</string>
    <string name="n">Nữ</string>
    <string name="marketing">Marketing</string>
    <string name="s_th_ch_c_a_t_i_l">Sở thích của tôi là</string>
    <string name="b_n_ch_a_ng_k_t_i_kho_n">Bạn chưa đăng kí tài khoản?</string>
    <string name="n_m_sinh_c_a_t_i_l">Năm sinh của tôi là</string>
    <string name="n_m_sinh">Năm sinh</string>
    <string name="vui_l_ng_ch_n_t_nh_t_2_nh">Vui lòng chọn ít nhất 2 ảnh</string>
    <string name="th_m_nh">Thêm ảnh</string>
    <string name="gi_i_thi_u_b_n_th_n">Giới thiệu bản thân</string>
    <string name="s_th_ch_c_a_t_i">Sở thích của tôi</string>
    <string name="qu_n_m_t_kh_u">Quên mật khẩu</string>
    <string name="kh_ng_nh_n_c_m">Không nhận được mã ?</string>
    <string name="g_i_l_i_m">Gửi lại mã</string>
    <string name="n_p_ti_n_n_o">Nạp tiền nào</string>
    <string name="type_a_message">type a message</string>
</resources>