<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/btnMessage"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp">

<!--    <com.google.android.material.card.MaterialCardView-->
<!--        android:id="@+id/cvAvatar"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:cardCornerRadius="32dp"-->
<!--        app:cardElevation="0dp">-->

<!--        <ImageView-->
<!--            android:id="@+id/imgAvatar"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:src="@drawable/img_recently" />-->
<!--    </com.google.android.material.card.MaterialCardView>-->
    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:id="@+id/cvAvatar"
        android:background="@drawable/background_image"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_oval="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/cvAvatar"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/ng_i_d_ng_gi_u_t_n"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/c_ho_t_ng_g_n_y_t_ng_t_c_li_n"
            android:textColor="@color/prime_2"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/_08_43"
            android:visibility="invisible"
            android:textColor="@color/prime_4"
            android:textSize="10sp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="17dp"
            android:layout_height="17dp"
            app:cardBackgroundColor="@color/prime_1"
            app:cardCornerRadius="32dp"
            android:visibility="invisible"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/tvCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="8sp" />
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>


</RelativeLayout>