<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layouted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/transparent"
            app:cardCornerRadius="32dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_back2" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="Đăng nhập"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:alpha="0.7"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/vui_l_ng_i_n_v_o_d_i_y"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:alpha="0.7"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="@color/black" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/transparent"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/prime_2"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/edUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:background="@color/transparent"
                android:hint="@string/nh_p_t_n_t_i_kho_n"
                android:paddingVertical="11dp"
                android:textColor="@color/black" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:alpha="0.7"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="@color/black" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/transparent"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/prime_2"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:background="@color/transparent"
                android:hint="@string/nh_p_m_t_kh_u"
                android:paddingVertical="11dp"
                android:textColor="@color/black" />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:padding="12dp"
        android:text="@string/qu_n_m_t_kh_u"
        android:textColor="@color/prime_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layouted" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/prime_1"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toTopOf="@+id/gl_hor1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:paddingVertical="11dp"
            android:text="@string/ng_nh_p"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="Bạn chưa có tài khoản?"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Đăng kí"
            android:textColor="@color/prime_1" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>