<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="32dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_back2" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/t_i_l"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnMale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        app:strokeColor="@color/prime_1"
        app:strokeWidth="1dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:paddingVertical="11dp"
            android:text="@string/n"
            android:textColor="@color/prime_1"
            android:textSize="18sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnFemale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btnMale"
        app:strokeColor="@color/prime_1"
        app:strokeWidth="1dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:paddingVertical="11dp"
            android:text="@string/nam"
            android:textColor="@color/prime_1"
            android:textSize="18sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnOther"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btnFemale"
        app:strokeColor="@color/prime_1"
        app:strokeWidth="1dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:paddingVertical="11dp"
            android:text="@string/kh_c"
            android:textColor="@color/prime_1"
            android:textSize="18sp" />
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/prime_1"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toTopOf="@+id/gl_hor2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:paddingVertical="11dp"
            android:text="@string/ti_p_t_c"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>